bisous de sologne

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="col-lg-6">
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
-                            <h1 class="display-1 lh-1 mb-3">Application mobile pour la biodiversité</h1>
+                            <h1 class="display-1 lh-1 mb-3">Bisous de Sologne</h1>
                             <p class="lead fw-normal text-muted mb-5">Une application pour accéder instantanément aux données environnementales autour de soi! </p>
                             <div class="d-flex flex-column flex-lg-row align-items-center">
                                 <a class="me-lg-3 mb-4 mb-lg-0" href="file:///C:/Users/jean-philippe.goyen/Documents/2302/ENSG/bootstrap/startbootstrap-new-age-gh-pages/index.html#!"><img class="app-badge" src="./index_files/google-play-badge.svg" alt="..."></a>
